[package]
name = "cuckoo_hashing"
version = "0.1.0"
authors = ["marimo-KD <marimo.for.others@gmail.com>"]
edition = "2018"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fxhash = { path = "../../algorithm/fxhash" }
ahash = { path = "../ahash" }

[dev-dependencies]
scanner = { path = "../scanner" }
