[package]
name = "fps"
version = "0.1.0"
authors = ["marimo-KD <marimo.for.others@gmail.com>"]
edition = "2018"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }
ntt = { path = "../ntt" }
static_modint = { path = "../static_modint" }
