[package]
name = "persistent_segment_tree"
version = "0.1.0"
authors = ["marimo-KD <marimo.for.others@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../../utility/algebra" }
my_range = { path = "../../utility/my_range" }

[dev-dependencies]
algebra_struct = { path = "../../utility/algebra_struct" }
