[package]
name = "fps"
version = "0.1.0"
authors = ["marimo-KD <marimo.for.others@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }
ntt = { path = "../../algorithm/ntt" }
static_modint = { path = "../static_modint" }
